--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -8,11 +8,9 @@
               <div class="grid grid-cols-6 gap-6">
                     <% if @site.new_record? %>
                         <% unless customer_logged_in? %>
-                          <div class="lg:col-span-3 sm:col-span-6">
-                            <!-- <div class="form-group"> -->
+                          <div class="form-group">
                             <%= form.label :customer_id, "Agency Customer*" %>
-                            <%= form.select :customer_id, options_from_collection_for_select(@customers, :id, :name, @customer_id), {prompt: "Please select A Customer"}, {class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm"} %>
-                            <!-- </div> -->
+                            <%= form.select :customer_id, options_from_collection_for_select(@customers, :id, :name, @customer_id), {prompt: "Please select A Customer"}, {class: 'form-select' } %>
                           </div>
                         <% end %>
                     <% else %>
@@ -35,8 +33,7 @@
                       </tr>
                       </template>
 
-                        <div class="lg:col-span-6 sm:col-span-6 text-md font-medium text-gray-900">Customer: <%= @site.customer&.name %></div>
-                      
+                      <div class="form-group block text-md font-medium text-gray-700">Customer: <%= @site.customer&.name %></div>
                     <% end %>
                
                 <div class="lg:col-span-3 sm:col-span-6">
