--- a/app/views/requestors/_form.html.erb
+++ b/app/views/requestors/_form.html.erb
@@ -34,12 +34,14 @@
                 </div>
               </div>
               <div class="col-span-6 sm:col-span-6" data-controller="select-group">
-                <div class="col-span-3 sm:col-span-3">
-                  <div class="form-group">
-                    <%= requestor_detail.label :customer_id, class: "block text-sm font-medium text-gray-700" %>
-                    <%= requestor_detail.select :customer_id, options_from_collection_for_select(account_customers, :id, :name, requestor.requestor_detail.customer_id ), {prompt: "Select A Customer First..."}, {class: 'form-control',  data: {action: 'change->select-group#updateSelectRemote', select_group_url_param: select_list_sites_path, select_group_select_key_param: 'customer_id', select_group_select_update_target_param: 'user_requestor_detail_attributes_site_id', select_group_select_clear_target_param: 'user_requestor_detail_department_id' }} %> 
+                <% unless customer_logged_in? %>
+                  <div class="col-span-3 sm:col-span-3">
+                    <div class="form-group">
+                      <%= requestor_detail.label :customer_id, class: "block text-sm font-medium text-gray-700" %>
+                      <%= requestor_detail.select :customer_id, options_from_collection_for_select(account_customers, :id, :name, requestor.requestor_detail.customer_id ), {prompt: "Select A Customer First..."}, {class: 'form-control',  data: {action: 'change->select-group#updateSelectRemote', select_group_url_param: select_list_sites_path, select_group_select_key_param: 'customer_id', select_group_select_update_target_param: 'user_requestor_detail_attributes_site_id', select_group_select_clear_target_param: 'user_requestor_detail_department_id' }} %> 
+                    </div>
                   </div>
-                </div>
+                <% end %>
                 <div class="col-span-3 sm:col-span-3">
                   <div class="form-group">
                     <%= requestor_detail.label :site_id, class: 'text-blueCoral' %>
