--- a/app/views/interpreters/public.html.erb
+++ b/app/views/interpreters/public.html.erb
@@ -1,34 +1,29 @@
-
 <div class="flex flex-1 flex-col md:pl-64">
   <main class="flex-1">
-    <div class="py-6">
-      <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
-        <div class="px-4 sm:px-6 lg:px-6">
-          <div class="sm:flex sm:items-center pb-6">
-            <div class="sm:flex-auto">
-              <h1 class="text-xl font-semibold text-gray-900">
-               <span class="text-tokanisecondary-500">
-                <%= current_user.full_name %>
-                </span>
-                <span class="text-tokaniprimary-600 font-light mx-2">/ <%= @title %></span>
-              </h1>
+    <div>
+      <div class="mx-auto max-w-7xl">
+        <div>
+          <div class="sm:hidden">
+            <label for="tabs" class="sr-only">Select a tab</label>
+            <!-- Use an "onChange" listener to redirect the user to the selected tab URL. -->
+            <select id="tabs" name="tabs" class="block w-full rounded-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500">
+              <option selected>Public</option>
+              <option>My Offered</option>
+              <option>My Scheduled</option>
+            </select>
+          </div>
+          <div class="hidden sm:block">
+            <div class="border-b border-gray-200">
+              <nav class="-mb-px flex" aria-label="Tabs">
+                <a href="#" class="<%= active_tab %> w-1/3 border-b-2 py-4 px-1 text-center text-sm font-medium">Public</a>
+                <a href="/interpreters/my_assigned" class="<%= inactive_tab %> w-1/3 border-b-2 py-4 px-1 text-center text-sm font-medium">My Offered</a>
+                <a href="/interpreters/my_scheduled" class="<%= inactive_tab %> w-1/3 border-b-2 py-4 px-1 text-center text-sm font-medium">My Scheduled</a>
+              </nav>
             </div>
           </div>
-
-          <ul class="list-none flex flex-wrap text-sm font-medium text-center text-gray-500 border-b border-gray-200 dark:border-gray-700 dark:text-gray-400">
-            <li class="mr-2">
-              <a href="#" aria-current="page" class="<%= active_tab %>">Public</a>
-            </li>
-            <li class="mr-2">
-              <a href="/interpreters/my_assigned" class="<%= inactive_tab %>">My Offered</a>
-            </li>
-            <li class="mr-2">
-              <a href="/interpreters/my_scheduled" class="<%= inactive_tab  %>">My Scheduled</a>
-            </li>
-          </ul>
-
+        </div>
+        <div class="px-4 sm:px-6 lg:px-6">
           <%= render partial: "fetch_appointments_form" %>
-
         </div>
       </div>
     </div>
