--- a/app/views/interpreters/dashboard.html.erb
+++ b/app/views/interpreters/dashboard.html.erb
@@ -1,78 +1,80 @@
 <div class="flex flex-1 flex-col md:pl-64">
 	<main class="flex-1">
 	  <div class="py-6">
-  
-		<div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
-		  <div class="px-4 sm:px-6 lg:px-6">
-			<div class="sm:flex sm:items-center pb-6">
-				<div class="sm:flex-auto"> 
-				  <h1 class="text-xl font-semibold text-gray-900">
-				   <span class="text-tokanisecondary-500">
-					<%= current_user.full_name %>
-					</span>
-					<span class="text-tokaniprimary-600 font-light mx-2">/Dashboard</span>    
-				  </h1>
-				</div>      
-			  </div>
-		  <div class="p-8 bg-white rounded shadow">
-		  <div class="px-4 sm:px-6 lg:px-8 container">
+  		<div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
+  		  <div class="px-4 sm:px-6 lg:px-6">
+  			<div class="sm:flex sm:items-center pb-6">
+  				<div class="sm:flex-auto">
+  				  <h1 class="text-xl font-semibold text-gray-900">
+  				    <span class="text-tokanisecondary-500"><%= current_user.full_name %></span>
+  					  <span class="text-tokaniprimary-600 font-light mx-2">/ Dashboard</span>
+  				  </h1>
+  				</div>
+  			</div>
+  		  <div class="p-8 bg-white rounded shadow">
+  		    <div class="px-4 sm:px-6 lg:px-8 container">
+            <div class="mx-auto max-w-7xl bg-white py-14 px-6 lg:px-8">
+              <div class="mt-5 space-y-12 lg:grid lg:grid-cols-3 lg:gap-x-8 lg:space-y-0">
+                <div class="relative flex flex-col rounded-2xl border border-gray-200 bg-white p-8 shadow-sm">
+                  <div class="flex-1">
+                    <h3 class="text-xl font-semibold text-gray-900 text-center">In Person Appointments</h3>
+                    <ul role="list" class="mt-6 space-y-6">
+                      <li class="text-center"><%= @in_person_stats[:today] %> today</li>
+            					<li class="text-center"><%= @in_person_stats[:week] %> next seven days</li>
+            					<li class="text-center"><%= @in_person_stats[:month] %> next thirty days</li>
+                    </ul>
+                  </div>
+                </div>
+            		<div class="relative flex flex-col rounded-2xl border border-gray-200 bg-white p-8 shadow-sm">
+                  <div class="flex-1">
+                    <h3 class="text-xl font-semibold text-gray-900 text-center">Telephone Appointments</h3>
+                    <ul role="list" class="mt-6 space-y-6">
+                      <li class="text-center"><%= @phone_stats[:today] %> today</li>
+                      <li class="text-center"><%= @phone_stats[:week] %> next seven days</li>
+                      <li class="text-center"><%= @phone_stats[:month] %> next thirty days</li>
+                    </ul>
+                  </div>
+                </div>
+            		<div class="relative flex flex-col rounded-2xl border border-gray-200 bg-white p-8 shadow-sm">
+                  <div class="flex-1">
+                    <h3 class="text-xl font-semibold text-gray-900 text-center">Video Appointments</h3>
+                    <ul role="list" class="mt-6 space-y-6">
+                      <li class="text-center"><%= @video_stats[:today] %> today</li>
+                      <li class="text-center"><%= @video_stats[:week] %> next seven days</li>
+                      <li class="text-center"><%= @video_stats[:month] %> next thirty days</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <% if @appointment_status_data.any? %>
+              	<div class="mt-5">
 
-<div class="mx-auto max-w-7xl bg-white py-24 px-6 lg:px-8">
-  <div class="mt-5 space-y-12 lg:grid lg:grid-cols-3 lg:gap-x-8 lg:space-y-0">
-    <div class="relative flex flex-col rounded-2xl border border-gray-200 bg-white p-8 shadow-sm">
-      <div class="flex-1">
-        <h3 class="text-xl font-semibold text-gray-900 text-center">In Person Appointments</h3>
-        <ul role="list" class="mt-6 space-y-6">
-          <li class="text-center"><%= @in_person_stats[:today] %> today</li>
-					<li class="text-center"><%= @in_person_stats[:week] %> next seven days</li>
-					<li class="text-center"><%= @in_person_stats[:month] %> next thirty days</li>
-        </ul>
-      </div>
-    </div>
-		<div class="relative flex flex-col rounded-2xl border border-gray-200 bg-white p-8 shadow-sm">
-      <div class="flex-1">
-        <h3 class="text-xl font-semibold text-gray-900 text-center">Telephone Appointments</h3>
-        <ul role="list" class="mt-6 space-y-6">
-          <li class="text-center"><%= @phone_stats[:today] %> today</li>
-          <li class="text-center"><%= @phone_stats[:week] %> next seven days</li>
-          <li class="text-center"><%= @phone_stats[:month] %> next thirty days</li>
-        </ul>
-      </div>
-    </div>
-		<div class="relative flex flex-col rounded-2xl border border-gray-200 bg-white p-8 shadow-sm">
-      <div class="flex-1">
-        <h3 class="text-xl font-semibold text-gray-900 text-center">Video Appointments</h3>
-        <ul role="list" class="mt-6 space-y-6">
-          <li class="text-center"><%= @video_stats[:today] %> today</li>
-          <li class="text-center"><%= @video_stats[:week] %> next seven days</li>
-          <li class="text-center"><%= @video_stats[:month] %> next thirty days</li>
-        </ul>
+                  <div class="grid grid-cols-2 gap-4">
+                    <div>
+                  		<%= pie_chart @appointment_status_data %>
+                      <br>
+                      <center><small><i>Appointment status breakdown for your appointments in the month of <%= @service.current_month %>.</i></small></center>
+                    </div>
+                    <div>
+                      <h4 class="mb-5">Upcoming Appointments <small>(next 7 days)</small></h4>
+
+                      <% if @upcoming_appointments.present? %>
+                        <ul>
+                          <% @upcoming_appointments.each do |appt| %>
+                            <li><%= link_to appointment_readable_link_title(appt, current_user), appointment_details_interpreter_path(appt) %></li>
+                          <% end %>
+                        </ul>
+                      <% else %>
+                        <p><i>No upcoming appointments in the next 7 days.</i></p>
+                      <% end %>
+
+                    </div>
+              	</div>
+              <% end %>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  <% if @appointment_status_data.any? %>
-  	<div class="mt-5">
-
-      <div class="grid grid-cols-2 gap-4">
-        <div>
-      		<%= pie_chart @appointment_status_data %>
-          <br>
-          <center><small><i>Appointment status breakdown for your appointments in the month of <%= @service.current_month %>.</i></small></center>
-        </div>
-        <div>
-          <h4 class="mb-5">Upcoming Appointments <small>(next 7 days)</small></h4>
-
-          <% if @upcoming_appointments.present? %>
-            <ul>
-              <% @upcoming_appointments.each do |appt| %>
-                <li><%= link_to appointment_readable_link_title(appt, current_user), appointment_details_interpreter_path(appt) %></li>
-              <% end %>
-            </ul>
-          <% else %>
-            <p><i>No upcoming appointments in the next 7 days.</i></p>
-          <% end %>
-
-        </div>
-  	</div>
-  <% end %>
 </div>
