--- a/app/views/interpreters/my_assigned.html.erb
+++ b/app/views/interpreters/my_assigned.html.erb
@@ -1,4 +1,31 @@
-<!-- Shares a view with My Scheduled -->
-<div class="ml-64">
-  <%= render template: "interpreters/my_scheduled" %>
+<div class="flex flex-1 flex-col md:pl-64">
+  <main class="flex-1">
+    <div>
+      <div class="mx-auto max-w-7xl">
+        <div>
+          <div class="sm:hidden">
+            <label for="tabs" class="sr-only">Select a tab</label>
+            <!-- Use an "onChange" listener to redirect the user to the selected tab URL. -->
+            <select id="tabs" name="tabs" class="block w-full rounded-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500">
+              <option>Public</option>
+              <option selected>My Offered</option>
+              <option>My Scheduled</option>
+            </select>
+          </div>
+          <div class="hidden sm:block">
+            <div class="border-b border-gray-200">
+              <nav class="-mb-px flex" aria-label="Tabs">
+                <a href="/interpreters/public" class="<%= inactive_tab %> w-1/3 border-b-2 py-4 px-1 text-center text-sm font-medium">Public</a>
+                <a href="#" class="<%= active_tab %> w-1/3 border-b-2 py-4 px-1 text-center text-sm font-medium">My Offered</a>
+                <a href="/interpreters/my_scheduled" class="<%= inactive_tab %> w-1/3 border-b-2 py-4 px-1 text-center text-sm font-medium">My Scheduled</a>
+              </nav>
+            </div>
+          </div>
+        </div>
+        <div class="px-4 sm:px-6 lg:px-6">
+          <%= render partial: "fetch_appointments_form" %>
+        </div>
+      </div>
+    </div>
+  </main>
 </div>
