--- a/app/views/interpreters/public.html.erb
+++ b/app/views/interpreters/public.html.erb
@@ -7,17 +7,17 @@
             <label for="tabs" class="sr-only">Select a tab</label>
             <!-- Use an "onChange" listener to redirect the user to the selected tab URL. -->
             <select id="tabs" name="tabs" class="block w-full rounded-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500">
-              <option>Public</option>
+              <option selected>Public</option>
               <option>My Offered</option>
-              <option selected>My Scheduled</option>
+              <option>My Scheduled</option>
             </select>
           </div>
           <div class="hidden sm:block">
             <div class="border-b border-gray-200">
               <nav class="-mb-px flex" aria-label="Tabs">
-                <a href="/interpreters/public" class="<%= inactive_tab %> w-1/3 border-b-2 py-4 px-1 text-center text-sm font-medium">Public</a>
+                <a href="#" class="<%= active_tab %> w-1/3 border-b-2 py-4 px-1 text-center text-sm font-medium">Public</a>
                 <a href="/interpreters/my_assigned" class="<%= inactive_tab %> w-1/3 border-b-2 py-4 px-1 text-center text-sm font-medium">My Offered</a>
-                <a href="#" class="<%= active_tab %> w-1/3 border-b-2 py-4 px-1 text-center text-sm font-medium">My Scheduled</a>
+                <a href="/interpreters/my_scheduled" class="<%= inactive_tab %> w-1/3 border-b-2 py-4 px-1 text-center text-sm font-medium">My Scheduled</a>
               </nav>
             </div>
           </div>
