--- a/app/views/customer_categories/_form.html.erb
+++ b/app/views/customer_categories/_form.html.erb
@@ -6,20 +6,20 @@
           <div class="bg-white px-4 py-5 sm:p-6">
             <div class="grid grid-cols-6 gap-6">
               <div class="col-span-6 sm:col-span-6 lg:col-span-3">
-                  <%= form.label :name, class: "block text-sm font-medium text-gray-700" %>
-                  <%= form.text_field :display_value, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                  <%= form.label "Name*", class: "block text-sm font-medium text-gray-700" %>
+                  <%= form.text_field :display_value, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", placeholder: "ex. Medical" %>
               </div>
               <div class="col-span-6 sm:col-span-6 lg:col-span-3">
-                <%= form.label :appointment_prefix, class: "block text-sm font-medium text-gray-700" %>
-                <%= form.text_field :appointment_prefix, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                <%= form.label "Appointment Prefix*", class: "block text-sm font-medium text-gray-700" %>
+                <%= form.text_field :appointment_prefix, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", placeholder: "ex. M" %>
               </div>
               <div class="col-span-6 sm:col-span-3">
-                <%= form.label :telephone_prefix, class: "block text-sm font-medium text-gray-700" %>
-                <%= form.text_field :telephone_prefix, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                <%= form.label "Telephone Prefix*", class: "block text-sm font-medium text-gray-700" %>
+                <%= form.text_field :telephone_prefix, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", placeholder: "ex. MT" %>
               </div>
               <div class="col-span-6 sm:col-span-3">
-                <%= form.label :video_prefix, class: "block text-sm font-medium text-gray-700" %>
-                <%= form.text_field :video_prefix, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                <%= form.label "Video Prefix*", class: "block text-sm font-medium text-gray-700" %>
+                <%= form.text_field :video_prefix, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", placeholder: "ex. MV" %>
               </div>
 
               <div class="col-span-6 sm:col-span-3 mt-4">
