--- a/app/views/interpreters/_form.html.erb
+++ b/app/views/interpreters/_form.html.erb
@@ -1,52 +1,51 @@
 <div>
     <% form_url = interpreter.new_record? ? interpreters_path : interpreter_path(interpreter) %>
     <%= form_with(model: interpreter, url: form_url) do |form| %>
+    <%= render "shared/error_messages", resource: form.object %>
     <%# form_with url: form_url do |form| %>
         <div class="mt-5 md:col-span-2 md:mt-0">
           <div class="overflow-hidden shadow sm:rounded-md">
             <div class="bg-white px-4 py-5 sm:p-6">
               <div class="grid grid-cols-6 gap-6">
                 <div class="col-span-6 sm:col-span-6 lg:col-span-3">
-                    <%= form.label :first_name, class: "block text-sm font-medium text-gray-700" %>
+                    <%= form.label "First Name*", class: "block text-sm font-medium text-gray-700" %>
                     <%= form.text_field :first_name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                 </div>
                 <div class="col-span-6 sm:col-span-6 lg:col-span-3">
-                  <%= form.label :last_name, class: "block text-sm font-medium text-gray-700" %>
+                  <%= form.label "Last Name*", class: "block text-sm font-medium text-gray-700" %>
                   <%= form.text_field :last_name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                 </div>
                 <div class="col-span-6 sm:col-span-3">
-                  <%= form.label :email, class: "block text-sm font-medium text-gray-700" %>
+                  <%= form.label "Email*", class: "block text-sm font-medium text-gray-700" %>
                   <%= form.text_field :email, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
-                </div>
-                <div class="col-span-6 sm:col-span-3">
-                  <%= form.label :password, class: "block text-sm font-medium text-gray-700" %>
-                  <%= form.text_field :password, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                 </div>
 
                 <%= form.fields_for :interpreter_detail do |interpreter_detail| %>
-                <div class="col-span-8 sm:col-span-6">
-                    <%= interpreter_detail.label :address, class: "block text-sm font-medium text-gray-700" %>
+
+                <div class="sm:col-span-6 lg:col-span-3">
+                  <%= interpreter_detail.label "Primary Phone*", class: "block text-sm font-medium text-gray-700" %>
+                  <%= interpreter_detail.text_field :primary_phone, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                </div>
+
+                <div class="lg:col-span-3 sm:col-span-6">
+                    <%= interpreter_detail.label "Address*", class: "block text-sm font-medium text-gray-700" %>
                     <%= interpreter_detail.text_field :address, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                 </div>
-                <div class="col-span-8 sm:col-span-3">
-                    <%= interpreter_detail.label :city, class: "block text-sm font-medium text-gray-700" %>
+                <div class="lg:col-span-3 sm:col-span-6">
+                    <%= interpreter_detail.label "City*", class: "block text-sm font-medium text-gray-700" %>
                     <%= interpreter_detail.text_field :city, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                 </div>
-                <div class="col-span-6 sm:col-span-6 lg:col-span-3">
-                    <%= interpreter_detail.label :state, class: "block text-sm font-medium text-gray-700" %>
-                    <%= interpreter_detail.text_field :state, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                
+                <div class="sm:col-span-6 lg:col-span-3">
+                    <%= interpreter_detail.label "State*", class: "block text-sm font-medium text-gray-700" %>
+                    <%= interpreter_detail.select :state, options_for_select(state_select_options), class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                 </div>
-                <div class="col-span-6 sm:col-span-6 lg:col-span-3">
-                    <%= interpreter_detail.label :zip, class: "block text-sm font-medium text-gray-700" %>
+                <div class="sm:col-span-6 lg:col-span-3">
+                    <%= interpreter_detail.label "Zip*", class: "block text-sm font-medium text-gray-700" %>
                     <%= interpreter_detail.text_field :zip, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                 </div>
+                
                
-                
-                
-                <div class="col-span-6 sm:col-span-6 lg:col-span-3">
-                    <%= interpreter_detail.label :primary_phone, class: "block text-sm font-medium text-gray-700" %>
-                    <%= interpreter_detail.text_field :primary_phone, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
-                </div>
                 <div class="col-span-6 sm:col-span-6 lg:col-span-3">
                     <%= interpreter_detail.label :SSN, class: "block text-sm font-medium text-gray-700" %>
                     <%= interpreter_detail.text_field :ssn, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
@@ -79,14 +78,14 @@
                 
                 <div class="col-span-6 sm:col-span-3">
                   <div class="form-group">
-                      <%= interpreter_detail.label :interpreter_type, class: "block text-sm font-medium text-gray-700" %>
+                      <%= interpreter_detail.label "Interpreter Type*", class: "block text-sm font-medium text-gray-700" %>
                       <%= interpreter_detail.select :interpreter_type, options_for_select(interpreter_type_options, interpreter.interpreter_detail.interpreter_type), {}, class: "form-control" %>
                     </div>
               </div>
   
               <div class="col-span-6 sm:col-span-3">
                   <div class="form-group">
-                      <%= interpreter_detail.label :gender , class: "block text-sm font-medium text-gray-700" %>
+                      <%= interpreter_detail.label "Gender*" , class: "block text-sm font-medium text-gray-700" %>
                       <%= interpreter_detail.select :gender, options_for_select(gender_options, interpreter.interpreter_detail.gender), {}, {class: 'form-control' } %>
                     </div>
               </div>
