--- a/app/views/interpreters/_interpreter.html.erb
+++ b/app/views/interpreters/_interpreter.html.erb
@@ -1,13 +1,10 @@
 <div class="overflow-hidden bg-white shadow sm:rounded-lg">
   <div class="px-4 py-5 sm:px-6">
-    <h3 class="text-lg font-medium leading-6 text-gray-900"><%= interpreter.last_name %>, <%= interpreter.first_name %></h3>
+    <h3 class="text-lg font-medium leading-6 text-gray-900"><%= interpreter.first_name %> <%= interpreter.last_name %></h3>
   </div>
   <div class="border-t border-gray-200 px-4 py-5 sm:p-0">
     <dl class="sm:divide-y sm:divide-gray-200">
-      <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
-        <dt class="text-sm font-medium text-tokanisecondary-600">Customer name</dt>
-        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= interpreter.first_name %></dd>
-      </div>
+      
       <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
         <dt class="text-sm font-medium text-tokanisecondary-600">Email Address</dt>
         <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= interpreter.email %></dd>
