--- a/app/views/languages/new.html.erb
+++ b/app/views/languages/new.html.erb
@@ -9,7 +9,7 @@
                 <div class="sm:flex-auto"> 
                   <h1 class="text-xl font-semibold text-gray-900">
                     <%= link_to "Languages", languages_path, class: "text-tokanisecondary-500" %>
-                      <span class="text-gray-400 font-light mx-2">\ New Customer</span>    
+                      <span class="text-gray-400 font-light mx-2">\ New Language</span>    
                   </h1>
                 </div>      
                 </div>
