--- a/app/views/recipients/index.html.erb
+++ b/app/views/recipients/index.html.erb
@@ -33,7 +33,7 @@
                   <tr>
                     <td class="w-full max-w-0 py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:w-auto sm:max-w-none sm:pl-6">
                       
-                      <%= link_to "#{recipient.last_name}, #{recipient.first_name}", recipient_path(recipient) %> 
+                      <%= link_to "#{recipient.first_name} #{recipient.last_name}", recipient_path(recipient) %> 
                       <dl class="font-normal lg:hidden">
                         <dt class="sr-only">Email</dt>
                         <dd class="mt-1 truncate text-gray-700"><%= recipient.email %></dd>
