--- a/app/views/requestors/_requestor.html.erb
+++ b/app/views/requestors/_requestor.html.erb
@@ -1,6 +1,6 @@
 <div class="overflow-hidden bg-white shadow sm:rounded-lg">
     <div class="px-4 py-5 sm:px-6">
-      <h3 class="text-lg font-medium leading-6 text-gray-900"><%= requestor.last_name %>, <%= requestor.first_name %></h3>
+      <h3 class="text-lg font-medium leading-6 text-gray-900"><%= requestor.first_name %> <%= requestor.last_name %></h3>
     </div>
     <div class="border-t border-gray-200 px-4 py-5 sm:p-0">
       <dl class="sm:divide-y sm:divide-gray-200">
