TK-223 Fix Sidenav Behavior for User Types (#234)
* TK-223 Fix Sidenav Behavior for User Types

- Create interpreter & agency_admin pundit policies
- Fix interpreter & shared sidenav rendering/overlaying on other pages
- Fix agency_detail_form errors

* TK-223 Updates

- Fix account_navbar Interpreter Details highlight
- Fix interpreter_sidenav highlights
- Fix Dashboard#show for interpreter to redirect to interpreters dashboard path
- Update helper for sidenav highlighting

* TK-223 Fix Sidenav Behavior for User Types

- Create interpreter & agency_admin pundit policies
- Fix interpreter & shared sidenav rendering/overlaying on other pages
- Fix agency_detail_form errors

* couple of sidenav fixes

* rebasing miss ...

---------

Co-authored-by: Jose Stephen Peña <jose.pena@cybersoftbpo.com>
Co-authored-by: Spencer Norman <spencerdnorman@gmail.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,13 +33,10 @@
       <% unless content_for?(:sidenav) %>
         <%= render partial: "shared/navbar" %>
       <% end %>
-      <div class="lg:px-0 h-full">
-        <% unless current_user.blank? || current_account_user.admin? %>
-          <% if current_account_user.interpreter? %>
-            <%= render partial: 'shared/interpreter_sidenav' %>
-          <% elsif current_account_user.agency_admin? %>
-            <%= render partial: 'shared/sidenav' %>
-          <% end %>
+      <div class="px-3 lg:px-0 h-full">
+        <% unless current_user.blank? %>
+          <%= render partial: 'shared/sidenav' %>
+          <%= render partial: 'shared/interpreter_sidenav' %>
         <% end %>
         <!-- <div class="p-8 bg-white rounded shadow"> -->
         <div class="flex flex-1 flex-col">
